- updated roadmap - added file type filtering - fixed contrast

--- a/src/app/shared/document-attachment/document-attachment.component.scss
+++ b/src/app/shared/document-attachment/document-attachment.component.scss
@@ -7,7 +7,7 @@
   
   .caption {
     padding: 0 1rem;
-    color: rgba($color: #000000, $alpha: .5);
+    color: rgba($color: #000000, $alpha: .6);
   }
 
   mat-list {
@@ -29,8 +29,8 @@
     .size {
       margin-left: 0.5rem;
 
-      font-weight: 500;
-      color: rgba($color: #000000, $alpha: .5);
+      font-weight: 400;
+      color: rgba($color: #000000, $alpha: .6);
     }
 
     .no-files {
@@ -39,7 +39,8 @@
 
       padding: 1rem 0;
 
-      color: rgba($color: #000000, $alpha: .5);
+      font-weight: 400;
+      color: rgba($color: #000000, $alpha: .6);
     }
   }
 
